Done, to be tested:
---------------------------
* IAT-Hook intercepts CreateProcessAsUser
* SuRun also sets its hooks into admin/service processes
* Added Spanish/Argentina resources
* Added "UPGRADE" to files that need admin rights
* Installer requires reboot in Vista/Win7 because SuRun hooks service processes
* FIX: Tray icon and Ballon tips were always shown (since 1.2.0.7 Beta 11)

ToDo
---------------------
* GUI for SwitchToUser
* less agressive "Admin with empty password" warning
* Less annoying Admin-Bubbles
* Console SuRun support
* Create a "Default" SuRunner for users that are not in "SuRunners"
* GUI for FUS
* Checksums for "Always Yes" programs
* Windows 7 compatibility
* LOG-File for SuRun activity

To be done in future:
---------------------
* Use Radio-Buttons for (normal/elevated) Auto-Magic
* Hide/Show all context menu entries consistently
* make all context menu entries dynamically with ShellExt 
  (E.g.: msi with popup-menu)

Deferred Whishlist:
---------------------
* Intercept CreateProcessAsUser in services and check for programs started 
  with limited rights that need to be started as admin
* Intercept "rundll32.exe newdev.dll,": 
    needs CredUI hack for XP/2k3; ok with 2k and Vista
    use "HKLM\SOFTWARE\Microsoft\Windows NT\CurrentVersion\Image File 
    Execution Options\Rundll32.exe",Debugger,C:\Windows\SuRun.exe /AUTORUN

------------------------------------------------------------------------------
SuRun Changes:
------------------------------------------------------------------------------

SuRun 1.2.0.7 Beta 11 - 2009-07-07:
-----------------------------------
* FIX: SuRuns IAT-Hook does not suspend Threads anmore in a process before 
  modifying the IAT. Suspending threads caused NTVDM to not work properly.
* FIX: To make SuRunExt.dll "AppInit_DLLs" compatible, it now initializes in a 
  separate thread. (Win x64 GPF'd)
* FIX: IATHook GPF'd with unnamed modules

SuRun 1.2.0.7 Beta 10 - 2009-06-28: