@@ -63,23 +63,23 @@ void TRACEx(LPCTSTR s,...)
   if (_vstprintf(&S[len],s,va)>=4096)
     DebugBreak();
   va_end(va);
-//  char tmp[MAX_PATH];
-//  GetTempPathA(MAX_PATH,tmp);
-//  PathRemoveBackslashA(tmp);
-//  PathAppendA(tmp,"SuRunLog.log");
-//  FILE* f=fopen(tmp,"a+t");
-//  if(f)
-//  {
-//    int len=(int)_tcslen(S);
-//#ifdef UNICODE
-//    char m[4096]={0};
-//    WideCharToMultiByte(CP_UTF8,0,S,len,m,len,0,0);
-//    fwrite(&m,1,len,f);
-//#else UNICODE
-//    fwrite(&S,1,len,f);
-//#endif UNICODE
-//    fclose(f);
-//  }
+  char tmp[MAX_PATH];
+  GetTempPathA(MAX_PATH,tmp);
+  PathRemoveBackslashA(tmp);
+  PathAppendA(tmp,"SuRunLog.log");
+  FILE* f=fopen(tmp,"a+t");
+  if(f)
+  {
+    int len=(int)_tcslen(S);
+#ifdef UNICODE
+    char m[4096]={0};
+    WideCharToMultiByte(CP_UTF8,0,S,len,m,len,0,0);
+    fwrite(&m,1,len,f);
+#else UNICODE
+    fwrite(&S,1,len,f);
+#endif UNICODE
+    fclose(f);
+  }
   OutputDebugString(S);
 }
 
@@ -92,16 +92,16 @@ void TRACExA(LPCSTR s,...)
   if (vsprintf(&S[len],s,va)>=1024)
     DebugBreak();
   va_end(va);
-//  char tmp[MAX_PATH];
-//  GetTempPathA(MAX_PATH,tmp);
-//  PathRemoveBackslashA(tmp);
-//  PathAppendA(tmp,"SuRunLog.log");
-//  FILE* f=fopen(tmp,"a+t");
-//  if(f)
-//  {
-//    fwrite(&S,sizeof(char),strlen(S),f);
-//    fclose(f);
-//  }
+  char tmp[MAX_PATH];
+  GetTempPathA(MAX_PATH,tmp);
+  PathRemoveBackslashA(tmp);
+  PathAppendA(tmp,"SuRunLog.log");
+  FILE* f=fopen(tmp,"a+t");
+  if(f)
+  {
+    fwrite(&S,sizeof(char),strlen(S),f);
+    fclose(f);
+  }
   OutputDebugStringA(S);
 }
 
